added lambda for stream processing

--- a/user_data.tmpl
+++ b/user_data.tmpl
@@ -18,7 +18,7 @@ wget http://media.sundog-soft.com/AWSBigData/Consumer.py
 chmod a+x Consumer.py
 touch consumer.log
 chown -R ec2-user.ec2-user /consumer.log
-su ec2-user bash -c "python Consumer.py > consumer.log &"
+#su ec2-user bash -c "python Consumer.py > consumer.log &"
 
 # download the producer software
 wget http://media.sundog-soft.com/AWSBigData/LogGenerator.zip
